--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -27,6 +27,7 @@
         </ng-template>
       </ng-template>
     </p-breadcrumb>
+    
   </div>
 </div>
 
@@ -38,7 +39,7 @@
     </ng-template>
 
     <ng-template #end>
-      <p-fileUpload
+      <!-- <p-fileUpload
         mode="basic"
         accept="image/*"
         [maxFileSize]="1000000"
@@ -54,7 +55,7 @@
         icon="pi pi-upload"
         severity="secondary"
         (onClick)="exportCSV()"
-      />
+      /> -->
       <!-- <p-button label="Export" icon="pi pi-upload" severity="secondary" (onClick)="exportCSV($event)" /> -->
     </ng-template>
   </p-toolbar>
